feat: Request record leave (cuti) baru
