# server/src/controllers/user.controller.js
@@ -1,4 +1,28 @@
-import { getLeaveBalanceByYear, getLeavesByNIK, } from "../services/user.service.js"
+import { createLeave, getLeaveBalanceByYear, getLeavesByNIK, } from "../services/user.service.js"
+
+
+export const createLeaveRequest = async (req, res) => {
+    try {
+        const user = req.session.user
+
+        console.log("Request body:", req.body);
+        console.log("id_special di body:", req.body.id_special);
+
+        const leave = await createLeave({
+            ...req.body,
+            NIK: user.NIK,
+        })
+
+        res.status(201).json({
+            message: "Leave request created successfully",
+            data: leave,
+        })
+    } catch (error) {
+        res.status(400).json({
+            message: error.message,
+        })
+    }
+}
 
 
 export const lastYearLeave = async (req, res) => {
